--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Fork the repo from here <a href= "https://github.com/MozLNMIIT/mozlnmiit.github.
     <table>
       <tr>
         <td>1</td>
-        <td>Dikshant Rathi</td>
+        <td>Dikshant </td>
         <td><a href="mailto:drathi782@gmail.com">drathi782@gmail.com</a>
       </tr>
     </table>
